# websockets

./: Cargo.toml
src/: batched.rs  error.rs  lib.rs
src/websocket/: builder.rs  frame.rs  handshake.rs  message.rs  mod.rs  ops.rs  parsed_addr.rs  socket.rs  split.rs  stream.rs  transport.rs
src/websocket/split/: read.rs  write.rs
