[package]
authors = ["imranmaj <49664304+imranmaj@users.noreply.github.com>"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
    "web-programming::websocket",
]
description = "A WebSocket client implementation."
documentation = "http://docs.rs/websockets"
edition = "2018"
keywords = ["websocket", "websockets", "async", "tokio", "io"]
license = "MIT"
name = "websockets"
readme = "README.md"
repository = "https://github.com/imranmaj/websockets"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64           = "0.12.3"
flume            = "0.10.7"
futures          = { version = "0.3.28", default-features = false, features = ["std", "async-await"] }
http-body-util   = "0.1.0-rc.3"
hyper            = { version = "1.0.0-rc.4", features = ["client", "http1"] }
hyper-util       = { git = "https://github.com/hyperium/hyper-util.git" }
native-tls       = "0.2.6"
rand             = "0.7.3"
rand_chacha      = "0.2.2"
sha-1            = "0.9.1"
thiserror        = "1.0.20"
tokio            = { version = "1", features = ["net", "io-util", "time"] }
tokio-native-tls = "0.3.0"
tokio-util       = { version = "0.7", features = ["codec"] }
url              = "2.1.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
